--- a/Patientenverwaltung/pom.xml
+++ b/Patientenverwaltung/pom.xml
@@ -26,6 +26,18 @@
     </plugins>
   </build>
   <dependencies>
+  <dependency>
+	<groupId>org.mockito</groupId>
+	<artifactId>mockito-all</artifactId>
+	<version>1.9.5</version>
+</dependency>
+  
+  <dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.6</version>
+</dependency>
+  
 <dependency>
 	<groupId>org.springframework</groupId>
 	<artifactId>spring-core</artifactId>
