--- a/Patientenverwaltung/.classpath
+++ b/Patientenverwaltung/.classpath
@@ -14,5 +14,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/xdocreport-1.0.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
