--- a/Patientenverwaltung/pom.xml
+++ b/Patientenverwaltung/pom.xml
@@ -58,6 +58,25 @@
 	<artifactId>spring-context</artifactId>
 	<version>4.1.6.RELEASE</version>
 </dependency>
-
+<dependency>
+    <groupId>fr.opensagres.xdocreport</groupId>
+    <artifactId>xdocreport</artifactId>
+    <version>1.0.5</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.velocity</groupId>
+    <artifactId>velocity</artifactId>
+    <version>1.7</version>
+</dependency>
+<dependency>
+    <groupId>org.freemarker</groupId>
+    <artifactId>freemarker</artifactId>
+    <version>2.3.22</version>
+</dependency>
+<dependency>
+    <groupId>oro</groupId>
+    <artifactId>oro</artifactId>
+    <version>2.0.8</version>
+</dependency>
   </dependencies>
 </project>
