--- a/Patientenverwaltung/.classpath
+++ b/Patientenverwaltung/.classpath
@@ -18,5 +18,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-3.9.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
