--- a/Patientenverwaltung/pom.xml
+++ b/Patientenverwaltung/pom.xml
@@ -31,7 +31,7 @@
 	<artifactId>mockito-all</artifactId>
 	<version>1.9.5</version>
 </dependency>
-  
+
   <dependency>
 	<groupId>mysql</groupId>
 	<artifactId>mysql-connector-java</artifactId>
@@ -77,6 +77,31 @@
     <groupId>oro</groupId>
     <artifactId>oro</artifactId>
     <version>2.0.8</version>
+</dependency>
+<dependency>
+    <groupId>com.lowagie</groupId>
+    <artifactId>itext</artifactId>
+    <version>4.2.1</version>
+</dependency>
+<dependency>
+    <groupId>org.odftoolkit</groupId>
+    <artifactId>odfdom-java</artifactId>
+    <version>0.8.7</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>3.12-beta1</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>3.12-beta1</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>ooxml-schemas</artifactId>
+    <version>1.1</version>
 </dependency>
   </dependencies>
 </project>
