--- a/Patientenverwaltung/pom.xml
+++ b/Patientenverwaltung/pom.xml
@@ -103,5 +103,10 @@
     <artifactId>ooxml-schemas</artifactId>
     <version>1.1</version>
 </dependency>
+<dependency>
+    <groupId>org.controlsfx</groupId>
+    <artifactId>controlsfx</artifactId>
+    <version>8.20.8</version>
+</dependency>
   </dependencies>
 </project>
